fixed folders and add server buttons being too big

--- a/warm-moon.theme.css
+++ b/warm-moon.theme.css
@@ -182,6 +182,11 @@ body {
         max-width: 226px;
         margin: 0 76px;
     }
+    .circleIconButton__5bc7e /* new server button */
+    {
+        width: 40px;
+		height: 40px;
+    }
 	--size: 48;
 	/* visual refresh is 40, old discord is 48. */
 	--guildbar-avatar-size: calc(var(--size) * 1px);
@@ -195,8 +200,8 @@ body {
 	--g-4-r-2: calc((var(--g-56-r) - var(--g-48)) / -2);
 
 	.folderIcon__48112>.wrapper_cc5dd2 {
-		width: var(--g-48) !important;
-		height: var(--g-48) !important;
+		width: 48px !important;
+		height: 48px !important;
 	}
 
 	.folderIcon__48112>.wrapper_cc5dd2>.svg_cc5dd2 {
@@ -226,8 +231,8 @@ body {
 
 	.folder__48112,
 	.folderIconWrapper__48112 {
-		width: 48px;
-		height: 48px;
+		width: 41px;
+		height: 41px;
 	}
 
 	.expandedFolderIconWrapper__48112 {
